--- a/views/twitter.erb
+++ b/views/twitter.erb
@@ -4,44 +4,75 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<link rel="stylesheet" type="text/css" href="/css/styles.css" />
 		<title>Amigos más pupulares en Twitter - Con Sinatra</title>
+		
+		<!-- Bootstrap core CSS -->
+   		<link href="./css/bootstrap.min.css" rel="stylesheet">
+    	<!-- Custom styles for this template -->
+    	<link href="./css/cover.css" rel="stylesheet">
 	</head>
 	<body>
-		<div id="cabecera">
-	 			<p><img src="/bird_icon.png" WIDTH=100 HEIGHT=100 />
-	 			<b>Amigos más Populares</b></p>
-	 			<h5>Por <a href="https://github.com/alu3286/SYTW-Practica-1">Eduardo Javier Acuña Ledesma</a></h5>
-	 			
-	 	</div>
-	 	
-	 	<div id="re">
-		 	<form action="/" method="post">
-		   		<p><b>Introduzca su nombre en Twitter: </b></p><input type="text" name="firstname"  value="" autofocus>
-		   		<p><b>¿Cuántos amigos desea ver? (máximo 10)</b></p><input type="text" name="n" value="1">
-		   		<input type="submit" value="Obtener" >
-		 	</form>
-	 	</div>
- 		
- 		<div id="izquierda">
-			<% if @name == ''%>
-				<p id="warning"> No se ha introducido un nombre o es incorrecto </p>
-			<%else%>
-        <p><b> Usuario <i><%= @name %></i></b></p>
-			<%end %>
+		<div class="site-wrapper">
+      		<div class="site-wrapper-inner">
+        		<div class="cover-container">
+          			<div class="masthead clearfix">
+            			
+              					<h3 class="masthead-brand"><img src="/bird_icon_white.png" WIDTH=150 HEIGHT=100 /></h3>
+              				
 
-			<% if @name != ''%>
-				<%if @number>10%>
-					<p id="warning"> Sólo se pueden mostrar hasta 10 amigos </p>
-				
-				<%else%>
-					<p>Amigos más populares:</p>
-					<ol>
-						<% @usuario.sort_by {|k,v| -v}.each {|usuario, cuenta| %>
-							<li id="col"><%= usuario %>: <%= cuenta %></li>
-						<% } %>
-							
-					</ol>
-				<%end%>
-			<%end%>
-		</div>
+            			
+          			</div>
+          			<div class="inner cover">
+            			<h1 class="cover-heading">Amigos más Populares</h1>
+            			<form action="/" method="post" role="form">
+            				<div class="form-group">
+						   		<p class="class="masthead-brand"">Introduzca su nombre en Twitter: </p><input type="text" name="firstname"  value="" autofocus>
+						   		<p class="class="masthead-brand"">¿Cuántos amigos desea ver? (máximo 10)</p><input type="text" name="n" value="1">
+						   	</div>
+						   	<div class="form-group">
+						   		<button type="submit" class="btn btn-success">Obtener</button>
+						   	</div>
+		 				</form>
+
+		 				<div>
+							<% if @name == ''%>
+								<p class="bg-danger" id="warning">No se ha introducido un nombre o es incorrecto </p>
+							<%else%>
+				        <p><b> Usuario <i><%= @name %></i></b></p>
+							<%end %>
+
+							<% if @name != ''%>
+								<%if @number>10%>
+									<p class="bg-danger" id="warning"> Sólo se pueden mostrar hasta 10 amigos </p>
+								
+								<%else%>
+									<div class="panel panel-default">
+									  <!-- Default panel contents -->
+									  <div class="panel-heading">Amigos más populares</div>
+									  <!-- Table -->
+									  <table class="table">
+									  	
+									  			<% p@usuario.sort_by {|k,v| -v}.each {|usuario, cuenta| %>
+													<tr><td id="col"><%= usuario %>: <%= cuenta %></td></tr>
+												<% } %>
+									  </table>
+									</div>
+								<%end%>
+							<%end%>
+						</div>
+          			</div>
+          			<div class="mastfoot">
+            			<div class="inner">
+              				<p>Sistemas y Tecnologías Web - Eduardo Javier Acuña Ledesma | Sergio Díaz González</p>
+            			</div>
+          			</div>
+        		</div>
+
+      		</div>
+    	</div>
+	    <!-- Bootstrap core JavaScript
+	    ================================================== -->
+	    <!-- Placed at the end of the document so the pages load faster -->
+	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	    <script src="./js/bootstrap.min.js"></script>
 	</body>
 </html>
