Modificando pie vista

--- a/views/twitter.erb
+++ b/views/twitter.erb
@@ -57,7 +57,7 @@
           			</div>
           			<div class="mastfoot">
             			<div class="inner">
-              				<p>Sistemas y Tecnologías Web - Eduardo Javier Acuña Ledesma | Sergio Díaz González</p>
+              				<p>Sistemas y Tecnologías Web - Eduardo Javier Acuña Ledesma | Sergio Díaz González &copy 2014</p>
             			</div>
           			</div>
         		</div>
