--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,11 +1,11 @@
 #warning{
 	/*background-color: #FFCC66;
 	font-size: 1.5em;
-	color: blue;
+	color: blue;*/
 	padding-left: 2em;
 	padding-right: 2em;
 	padding-top: 0.9em;
-	padding-bottom: 0.9em;*/
+	padding-bottom: 0.9em;
 	color: #3399FF;
 }
 
